--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
+# mongos credencial
 MONGODB_URI=mongodb://localhost:27017/nos
+# nodemailers crendential
+MAIL_USER=nousnousbro@gmail.com
+MAIL_PASS=adminq1w2e3r4t5
+MAIL_PORT=465
+MAIL_HOST=smtp.gmail.com
+MAIL_FROM=nousnousbro@gmail.com
+
+
