--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # mongos credencial
-MONGODB_URI=mongodb://localhost:27017/test
+MONGODB_URI=mongodb://localhost:27017/nos
 # nodemailers crendential
 MAIL_USER=email
 MAIL_PASS=pass
