--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # mongos credencial
-MONGODB_URI=mongodb://localhost:27017/nos
+MONGODB_URI=mongodb://localhost:27017/thunder-db
 # nodemailers crendential
 MAIL_USER=email
 MAIL_PASS=pass
