--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # mongos credencial
-MONGODB_URI=mongodb://localhost:27017/thunder-db
+# MONGODB_URI=mongodb://localhost:27017/thunder-db
+MONGODB_URI=mongodb+srv://dbuser:q1w2e3r4@cluster0-ayxua.mongodb.net/thunder-cash-db?retryWrites=true&w=majority
 # nodemailers crendential
 MAIL_USER=email
 MAIL_PASS=pass
